correccion nombre de partition